sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: not found: value plus
      if(plus(v, i - 1))
         ^AlgInsertionSort:9: error: value -= is not a member of Int
      i -= 1
        ^